--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </head>
 <body>
 
-<h2>下のボタンを押すと、URLが生成されます</h2>
-<button onclick="openRandomForm()">URLを生成する</button>
+<h2>下のボタンを押すと、フォームが生成されます</h2>
+<button onclick="openRandomForm()">フォームを生成する</button>
 <p id="formLink"></p>
 
 <script>
