--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     const randomFormUrl = formUrls[randomIndex];
 
     // 選ばれたURLをリンクとして表示
-    document.getElementById("formLink").innerHTML = `<a href="${randomFormUrl}" target="_blank">こちらのフォームを開く</a>`;
+    document.getElementById("formLink").innerHTML = `<a href="${randomFormUrl}" target="_blank">フォームを開いてアンケートに進む</a>`;
   }
 </script>
 
